Fix vertial align of menu bar strictly

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -43,9 +43,14 @@ body {
         border-radius: 0.3em;
         text-align: center;
         text-decoration: none;
-        line-height: 150%;
 
         display: none;
+
+        i {
+            margin-top: 50%;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
     }
     &:target a {
         display: initial;
